# MLCookieCutter

./: README.md  cookiecutter.json
docs/superpowers/plans/: 2026-03-12-cookiecutter-ci-cd-modernization.md  2026-03-16-mlcookiecutter-improvements.md
docs/superpowers/specs/: 2026-03-12-cookiecutter-ci-cd-modernization-design.md  2026-03-16-mlcookiecutter-improvements-design.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile.base  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/.github/workflows/: ci.yml  release.yml
{{cookiecutter.directory_name}}/src/: __init__.py  process.py  train_model.py
{{cookiecutter.directory_name}}/tests/: __init__.py
