[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = "{{cookiecutter.python_version}}"
dependencies = []

# ---------- UV Configuration ----------
[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.9",
    "pre-commit>=4.0.1",
    "build",
    "twine",
    "loguru>=0.7.2",
    "pyyaml>=6.0.2",
{%- if cookiecutter.include_dvc == "true" %}
    "dvc[s3]>=3.55.2",
    "dvclive>=3.48.0",
    "gto>=1.7.1",
{%- endif %}
]

[tool.uv]
default-groups = ["dev"]

# ---------- Hatch Version Configuration ----------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# ---------- Ruff Configuration ----------
[tool.ruff]
target-version = "{{cookiecutter.target_python_version}}"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLC0415", # import not at top-level (lazy imports are intentional)
    "RUF001",  # ambiguous unicode chars (common in prompt strings)
    "RUF002",  # ambiguous unicode chars in docstrings
    "RUF003",  # ambiguous unicode chars in comments
    "RUF005",  # consider unpacking instead of concatenation
    "RUF006",  # dangling asyncio task
    "RUF013",  # implicit Optional
    "RUF059",  # unused unpacked variables
    "PTH103",  # os.makedirs → Path.mkdir
    "PTH110",  # os.path.exists → Path.exists
    "PTH118",  # os.path.join → Path /
    "PTH120",  # os.path.dirname → Path.parent
    "PTH123",  # open() vs Path.open()
    "PTH207",  # glob → Path.glob
    "PLE1205", # too many args for logging format string
    "ERA001",  # commented-out code (too noisy)
    "B905",    # zip() without strict=
    "B006",    # mutable default argument (list/dict literal)
    "B007",    # unused loop variable
    "SIM105",  # use contextlib.suppress
    "SIM115",  # use context manager for open
    "SIM117",  # use single with statement
    "SIM118",  # use key in dict instead of dict.keys()
    "SIM108",  # use ternary operator
    "PLW2901", # overwriting loop variable
    "PLW3301", # nested min/max
    "PLW0603", # global statement
    "E741",    # ambiguous variable name
    "TC002",   # move third-party import into TYPE_CHECKING (risky at runtime)
    "TC003",   # move stdlib import into TYPE_CHECKING (risky at runtime)
    "RUF057",  # unnecessary round on int
    "B039",    # mutable ContextVar default
    "B034",    # re.sub with count without flags
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]
"**/conftest.py" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------- Pytest Configuration ----------
[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------- Semantic Release Configuration ----------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/__init__.py:__version__"]
branch = "{{cookiecutter.default_branch}}"
tag_format = "v{version}"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
build_command = """
    uv lock --upgrade-package {{cookiecutter.project_name}}
    git add uv.lock
    uv build
"""

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
